syntax = "proto3";

option csharp_namespace = "BankAccountService";
package BankAccountApi;

service AuthorizationGrpc{
  rpc Register(RegisterRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (AuthResponse);
}

message RegisterRequest{
  string full_name = 1;
  string phone_number = 2;
  string password = 3;
}
message AuthResponse{
  bool success = 1;
  string message = 2;
  int32 user_id = 3;
  string jwtToken = 4;
}

message LoginRequest{
  string phone_number = 1;
  string password = 2;
}

